# teleport

./: .gitignore  CLAUDE.md  HYBRID_CODEC_TASK.md  IMPLEMENTATION_PLAN.md  pyproject.toml  results.md
scripts/: eval_generative.py  eval_image.py  get_data.py  pretrain_rnn.py  train_image.py
src/teleport/: baselines.py  bench.py  hybrid.py
src/teleport/coder/: __init__.py  arithmetic.py  bitio.py  codec.py  freqs.py
src/teleport/generative/: __init__.py  codec.py
src/teleport/image/: __init__.py  codec.py  metrics.py  model.py
src/teleport/predictors/: __init__.py  base.py  order0.py  ppm.py  rnn.py  uniform.py
tests/: test_bench.py  test_coder.py  test_generative.py  test_hybrid.py  test_image.py  test_predictors.py  test_rnn.py  verify_sync.py
