[project]
name = "teleport"
version = "0.1.0"
description = "Learned-compression research project: prediction is compression."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "zstandard>=0.22",
    "requests>=2.31",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.100",
]
image = [
    "pillow>=10.0",
    "matplotlib>=3.8",
]
generative = [
    "diffusers>=0.27",
    "safetensors>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teleport"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
